Fixed illegibility

--- a/styles/Squadpagecss.css
+++ b/styles/Squadpagecss.css
@@ -5,12 +5,12 @@
   /*for the back of the animated boxes, do not edit!*/
 }
 @font-face {
-  font-family: "Nighty";
-  src: url('../assets/Nightydemo.otf');
-  src: url('../assets/Nightydemo.otf') format('embedded-opentype');
+  font-family: "Relieve";
+  src: url('../assets/Relieve.ttf');
+  src: url('../assets/Relieve.ttf') format('truetype');
 }
 body {
-  font-family: "Nighty",'Segoe UI',Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Relieve", sans-serif;
   background-color: #d1dcfc ;
   color: #F9F5E3;
   display: flex;
@@ -18,7 +18,6 @@ body {
   align-items: center;
   min-height: 100vh;
   background-image: url(https://img.freepik.com/free-vector/beautiful-mountain-landscape-early-pink-morning_107791-8498.jpg?w=900&t=st=1707697480~exp=1707698080~hmac=cd2768359d99e919428750a6541b5e4e2c25c7e690d2fa0f38cc9ed261ee2a43);
-  /* Idk if this image will continue to work because it is not a local file??? lol */
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -42,6 +41,7 @@ body {
   color: #841D4C;
   margin-top: 20px;
   margin-bottom: 10px;
+  font-family: "Pacifico", cursive;
 }
 
 .title {
@@ -49,6 +49,7 @@ body {
   margin-bottom: 20px;
   font-weight: 600;
   color: #841D4C;
+  font-family: "Pacifico", cursive;
 }
 
 .description {
